Enhance MarcaDto and UserRace functionality: add methods to retrieve, update, and delete race marks